# TVBoxOS

./: .gitignore  build.gradle
.github/workflows/: test.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/tvbox/osc/api/: ApiConfig.java
app/src/main/java/com/github/tvbox/osc/base/: App.java  BaseActivity.java
app/src/main/java/com/github/tvbox/osc/bean/: VodInfo.java
app/src/main/java/com/github/tvbox/osc/data/: AppDataManager.java
app/src/main/java/com/github/tvbox/osc/player/: IjkMediaPlayer.java
app/src/main/java/com/github/tvbox/osc/server/: InputRequestProcess.java
app/src/main/java/com/github/tvbox/osc/util/: DefaultConfig.java  FileUtils.java  HistoryHelper.java  OkGoHelper.java  PlayerHelper.java  XWalkUtils.java
app/src/main/res/drawable/: shape_player_control_vod_seek_thumb.xml
app/src/main/res/layout/: activity_collect.xml  activity_detail.xml  activity_history.xml  activity_live_play.xml  dialog_checkbox_search.xml  fragment_model.xml  fragment_user.xml  item_dialog_checkbox_search.xml  item_dialog_select.xml  item_seekbar_time.xml  player_vod_control_view.xml
app/src/main/res/menu/: menu_pop.xml
app/src/main/res/raw/: script.js
app/src/main/res/values/: colors.xml
player/: build.gradle
player/src/main/java/xyz/doikki/videoplayer/controller/: ControlWrapper.java  MediaPlayerControl.java
player/src/main/java/xyz/doikki/videoplayer/player/: ProgressManager.java  VideoView.java
quickjs/: build.gradle
quickjs/src/main/cpp/: CMakeLists.txt
(+20 files in other folders)
